--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     "*.wxml": "html",
     "*.wxss": "css",
     "defs.h": "c",
-    "syscall.h": "c"
+    "syscall.h": "c",
+    "file.h": "c",
+    "fs.h": "c"
   }
 }
